chore: more java 21 idiomatic code (#2143)
* chore: more java 21 idiomatic code

* chore: openrewrite migration

* fix: update metadata column references to use consistent naming